--- a/flask_mysql/requirements.txt
+++ b/flask_mysql/requirements.txt
@@ -2,6 +2,7 @@ Click==7.0
 decorator==4.3.2
 Flask==1.0.2
 Flask-SQLAlchemy==2.3.2
+flask-cors==3.0.7
 gunicorn==19.9.0
 itsdangerous==1.1.0
 Jinja2==2.10
