--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,5 @@
 Click==7.0
+coverage==4.5.3
 decorator==4.3.2
 Flask==1.0.2
 Flask-SQLAlchemy==2.3.2
@@ -12,6 +13,10 @@ nltk==3.4
 numpy==1.16.2
 pandas==0.24.1
 PyMySQL==0.9.3
+pytest==4.4.0
+pytest-cov==2.6.1
+pytest-flask==0.14.0 
+pytest-mock==1.10.3 
 python-dateutil==2.8.0
 pytz==2018.9
 singledispatch==3.4.0.3
