--- a/requirements.txt
+++ b/requirements.txt
@@ -19,6 +19,8 @@ pytest-flask==0.14.0
 pytest-mock==1.10.3 
 python-dateutil==2.8.0
 pytz==2018.9
+redis==3.2.1
+rq==1.0
 singledispatch==3.4.0.3
 six==1.12.0
 SQLAlchemy==1.3.1
